refactor(validation): migrate validation to controller layer
Added @NotBlank and @NotNull to NotificationRequestDTO fields

Replaced service checks with @NotEmptyField in controller